# research-literature-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  research_potential.md
examples/: basic_usage.py  custom_config.py  step_by_step.py
research_agent/: __init__.py  agent.py  arxiv_retriever.py  config.py  literature_generator.py  summarizer.py  utils.py  vector_store.py
tests/: test_arxiv_retriever.py  test_config.py  test_literature_generator.py  test_utils.py
